Update index.html 03

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyLkbu0cN5XLrcLsFU-pisf-uV5IveVzirsYp63OBEpe_83Q2JSvUh6elauX_YPCuVnfg/exec"; 
         
         // 活動網頁 (返回按鈕用)
-        const EVENT_PAGE_URL = "https://script.google.com/macros/s/AKfycbyBqro7FWCjJQdmDyesUjDUSPf6ZZVUAhBXBdr2dNL2BJt2N-p62KqJ3A2TWoMzVD4E/exec";
+        const EVENT_PAGE_URL = "https://linktr.ee/ntuhmed";
         // =========================================================================
 
         // --- Icons ---
@@ -454,4 +454,5 @@
     </script>
 </body>
 </html>
+
 
