Update index.html 0204

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         const lectureOptions = [
             { title: "醫師與醫事人員科學家之倫理素養", speaker: "蔡甫昌 主任" },
             { title: "教學部講題：教學資源與規範", speaker: "楊志偉 副主任" },
-            { title: "教學部講題：教學實務分享", speaker: "陳慧玲 主任" },
+            { title: "從站穩腳步到精益求精：個人永續發展之路", speaker: "陳慧玲 主任" },
             { title: "個人研究與出國進修分享", speaker: "鐘桂彬 助理教授" },
             { title: "如何發起及執行臨床試驗？", speaker: "劉志銘 教授" },
             { title: "透過生醫設計流程解決臨床問題", speaker: "黃博浩 副教授" },
@@ -454,5 +454,6 @@
     </script>
 </body>
 </html>
+
 
 
