--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>115年度臺大醫療體系新進主治醫師與醫事人員研究營滿意度調查</title>
+    <title>115年度臺大醫療體系新進主治醫師與醫事人員研究營</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -100,11 +100,11 @@
         const lectureOptions = [
             { title: "醫師與醫事人員科學家之倫理素養", speaker: "蔡甫昌 主任" },
             { title: "教學部講題：教學資源與規範", speaker: "楊志偉 副主任" },
-            { title: "從站穩腳步到精益求精：個人永續發展之路", speaker: "陳慧玲 主任" },
+            { title: "臨床與基礎研究的選擇", speaker: "林頌然 主任" }, // Swapped here
             { title: "個人研究與出國進修分享", speaker: "鐘桂彬 助理教授" },
             { title: "如何發起及執行臨床試驗？", speaker: "劉志銘 教授" },
             { title: "透過生醫設計流程解決臨床問題", speaker: "黃博浩 副教授" },
-            { title: "臨床與基礎研究的選擇", speaker: "林頌然 主任" },
+            { title: "從站穩腳步到精益求精：個人永續發展之路", speaker: "陳慧玲 主任" }, // Swapped here
             { title: "護理部分享", speaker: "鄭靜宜 護理師" },
             { title: "檢驗醫學部分享", speaker: "陳怡婷 醫檢師" },
             { title: "藥劑部分享", speaker: "林欣儀 藥師" },
@@ -468,4 +468,3 @@
     </script>
 </body>
 </html>
-
