--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         // Lecture Data
         const lectureOptions = [
             { title: "醫師與醫事人員科學家之倫理素養", speaker: "蔡甫昌 主任" },
-            { title: "教學部講題：教學資源與規範", speaker: "楊志偉 副主任" },
+            { title: "讓教學被看見：臨床教師教學研究之路-從教學現場到學術成果", speaker: "楊志偉 副主任" },
             { title: "臨床與基礎研究的選擇", speaker: "林頌然 主任" }, // Swapped here
             { title: "個人研究與出國進修分享", speaker: "鐘桂彬 助理教授" },
             { title: "如何發起及執行臨床試驗？", speaker: "劉志銘 教授" },
@@ -468,3 +468,4 @@
     </script>
 </body>
 </html>
+
